fix profile page title not wrapping

--- a/Web/static/css/profile.css
+++ b/Web/static/css/profile.css
@@ -84,20 +84,20 @@ body {
 }
 
 .movie-title {
-    line-height: 1em;
-    height: 2em;
     text-align: center;
-    font-size: 14px;
     position: relative;
+    display: grid;
+    word-break: break-all;
     word-wrap: break-word;
+    white-space: normal;
 }
 
 .movie-poster-div {
     max-width: 100%;
-    max-height: 100%;
+    max-height: 85%;
     position: inherit;
     width: 100%;
-    height: 100%;
+    height: 80%;
     display: inline-block;
 }
 
